<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/riverPlate"
                    android:textColor="#616161"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/score_river"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/scoreRiver"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center"
                    android:onClick="golRiver"
                    android:text="@string/GOL" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:gravity="center"
                        android:onClick="faltasRiver"
                        android:text="@string/faltasriver" />

                    <TextView
                        android:id="@+id/faltas_river"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/faltas"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:gravity="center"
                        android:onClick="cartoesRiver"
                        android:text="@string/cartões" />

                    <TextView
                        android:id="@+id/cartoes_river"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cartoes_river"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/bocaJuniors"
                    android:textColor="#616161"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/score_boca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/scoreBoca"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center"
                    android:onClick="golBoca"
                    android:text="@string/golBoca" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/faltas_boca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/faltas_boca"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:gravity="center"
                        android:onClick="faltasBoca"
                        android:text="@string/faltasBoca" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cartoes_boca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cartoes_boca"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:gravity="center"
                        android:onClick="cartoesBoca"
                        android:text="@string/cartoesBoca" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:onClick="reset"
        android:text="@string/reset" />


</RelativeLayout>